[package]
name = "wavy"
description = "A simple synthetizer plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-extensions = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0", features = ["audio-ports", "clack-plugin", "note-ports"] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0" }

[package.metadata.bundle]
